# cardholder_pwa

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  docker-compose.dev.yml  docker-compose.my.yml  docker-compose.pg.yml  docker-compose.prod.yml  docker-compose.sqlite.yml  docker-compose.yml  install.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  readme.md  supervisord.conf
backend/: .gitignore  README.md  app.py  auth.py  config.py  database.py  dev.py  env.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  schemas.py  start.py
backend/.cardholder_pwa/: readme.md
backend/alembic/: env.py
backend/alembic/versions/: 0a1b702b1d4c_init.py  21459fe9053f_add_system_settings_table.py  62f72c3ab3a5_favorite_and_recent_cards.py  8197be449211_add_user_roles.py
backend/api/: __init__.py  admin.py  admin_api.py  auth.py  auth_api.py  card.py  card_api.py  password_recovery.py  password_recovery_api.py  public.py  public_api.py  user.py  user_api.py
backend/app/: app.py  config.py  env.py  main.py
backend/core/: __init__.py  auth.py  auth_core.py  smtp.py  smtp_core.py  user.py  user_core.py
backend/db/: cleanup.py  session.py
backend/enums/: __init__.py  settings_enum.py  user_role_enum.py
backend/helpers/: delay_to_minimum.py  get_setting_typed_value.py
backend/schemas/: auth_schema.py  card_schema.py  password_recovery_schema.py  public_settings.py  public_settings_schema.py  settings.py  settings_schema.py  user.py  user_schema.py  version.py  version_schema.py
(+248 files in other folders)
